Highlight color fix for about me page
And also removed "Declarative" from the overwatch page when talking about the scripting language (its not declarative)

--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@ title: "About Me"
 </div>
 <div class="gamesContainer" style="margin: 0rem 15% 2rem;
 ">
-    <div class="designProcessItem">
+    <div class="designProcessItem redBackgroundColor">
         <h2>1. <span style="text-decoration: underline;">Understand Goals</span></h2>
         <p>
             Speak with <strong>Narrative Designers</strong>, <strong>Engineers</strong>, <strong>VFX</strong>,
             <strong>Animators</strong>, <strong>UIUX</strong>, <strong>Producers</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
     </div>
-    <div class="designProcessItem">
+    <div class="designProcessItem redBackgroundColor">
         <h2>2. <span style="text-decoration: underline;">Brainstorm & Research</span></h2>
         <p>
             What could be <strong>missing</strong> from our game?
@@ -66,14 +66,14 @@ title: "About Me"
             What did <strong>players think</strong> of that content?
         </p>
     </div>
-    <div class="designProcessItem">
+    <div class="designProcessItem redBackgroundColor">
         <h2>3. <span style="text-decoration: underline;">Implement</span></h2>
         <p>
             <strong>Implement</strong>, <strong>iterate</strong>, and <strong>debug</strong>
             prototypes by <strong>scripting</strong> and/or working <strong>in-editor</strong>.
         </p>
     </div>
-    <div class="designProcessItem">
+    <div class="designProcessItem redBackgroundColor">
         <h2>4. <span style="text-decoration: underline;">Playtest</span></h2>
         <p>
             Lead and participate in <strong>playtests</strong> to give and receive valuable <strong>feedback</strong> and <strong>data</strong>.
