--- a/overwatch2.html
+++ b/overwatch2.html
@@ -23,7 +23,7 @@ title: "Overwatch 2"
             <ul>
                 <li>Implemented an original, fully playable Overwatch 2 hero with <strong>5 unique abilities</strong>.</li>
                 <li>Conceptualized multiple <strong>paper design concepts</strong>, representative of the 3 different Overwatch roles.</li>
-                <li>Scripted using Overwatch 2’s <strong>declarative visual proprietary design scripting language</strong>.</li>
+                <li>Scripted using Overwatch 2’s <strong>visual proprietary design scripting language</strong>.</li>
                 <li><strong>Led playtests</strong> and utilized feedback to iterate upon my own hero.</li>
                 <li>Participated in playtests and gave <strong>instrumental feedback</strong> to improve upon Overwatch 2.</li>
             </ul>
