--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: "Home"
         <!-- If you want titles below the thumbnail, use this figcaption structure:
             <figcaption>DIABLO IV</figcaption> -->
             <ul class="tags">
-                <li class="Internship">Internship</li>
+                <li class="Internship redBackgroundColor">Internship</li>
                 <li class="CombatDesign">Combat Design</li>
             </ul>
         </div>
@@ -47,7 +47,7 @@ title: "Home"
         <div class="hoverfilter">
             <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
             <ul class="tags">
-                <li class="Internship">Internship</li>
+                <li class="Internship redBackgroundColor">Internship</li>
                 <li class="CombatDesign">Combat Design</li>
             </ul>
         </div>
@@ -55,7 +55,7 @@ title: "Home"
 </div>
 <hr>
 <div class="titleContainer">
-    <h1>Personal Projects</h1>
+    <h1>Game Projects</h1>
 </div>
 <div class="homePageGames">
     <div class="game">
@@ -63,7 +63,7 @@ title: "Home"
         <div class="hoverfilter">
             <a href="drivetalk.html"><img src="images/drivetalk/drivetalk.png" alt="drivetalk"></a>
             <ul class="tags">
-                <li class="TeamLead">Team Lead</li>
+                <li class="TeamLead redBackgroundColor">Team Lead</li>
                 <li class="SystemsDesign">Systems Design</li>
                 <li class="Narrative">Narrative</li>
             </ul>
@@ -74,7 +74,7 @@ title: "Home"
         <div class="hoverfilter">
             <a href="UCIWare.html"><img src="images/UCIWare/UCIWareIcon.png" alt="UCI-Ware"></a>
             <ul class="tags">
-                <li class="TeamLead">Team Lead</li>
+                <li class="TeamLead redBackgroundColor">Team Lead</li>
                 <li class="SystemsDesign">Systems Design</li>
                 <li class="Art">2D Art</li>
             </ul>
@@ -125,7 +125,7 @@ title: "Home"
         <div class="hoverfilter">
             <a href="wormchelor.html"><img src="images/Wormchelor/Wormchelor.png" alt="The Wormchelor: Card Game"></a>
             <ul class="tags">
-                <li class="TeamLead">Team Lead</li>
+                <li class="TeamLead redBackgroundColor">Team Lead</li>
                 <li class="SystemsDesign">Systems Design</li>
                 <li class="Art">2D Art</li>
                 <li class="Party">Party Game</li>
