Edited about me description
also removed mentions of being a student

--- a/about.html
+++ b/about.html
@@ -27,8 +27,12 @@ title: "About Me"
         </h2>
         <p>
             <br>
-            I'm a <strong>UC Irvine</strong> student majoring in <strong>Game Design & Interactive Media</strong>!
-            I'm a big fan of <strong>autobattlers</strong> and <strong>roguelikes</strong> and I derive a lot of my inspiration from them.
+            I'm a <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> & <strong>Systems</strong> Design!
+            <!--I am a strong collaborator 
+            Due to my experience working on 
+            My primary passions
+            I'm a big fan of <strong>autobattlers</strong> and <strong>roguelikes</strong> and I derive a lot of my inspiration from them.-->
+            <br>Previously, I worked on <strong>Diablo IV</strong> as a Class Designer and <strong>Overwatch 2</strong> as a Hero Designer.
         </p>
         <div class="customizaAboutMe">
             <p>I am </p>
@@ -55,8 +59,7 @@ title: "About Me"
     <div class="designProcessItem redBackgroundColor">
         <h2>1. <span style="text-decoration: underline;">Understand Goals</span></h2>
         <p>
-            Speak with <strong>Narrative Designers</strong>, <strong>Engineers</strong>, <strong>VFX</strong>,
-            <strong>Animators</strong>, <strong>UIUX</strong>, <strong>Producers</strong>, and other <strong>Game Designers</strong> to understand goals and constraints.</p>
+            Speak with fellow <strong>Designers</strong> and other departments/disciplines (example: <strong>Narrative Designers</strong>) to understand goals and constraints.</p>
     </div>
     <div class="designProcessItem redBackgroundColor">
         <h2>2. <span style="text-decoration: underline;">Brainstorm & Research</span></h2>
@@ -78,8 +81,7 @@ title: "About Me"
         <p>
             Lead and participate in <strong>playtests</strong> to give and receive valuable <strong>feedback</strong> and <strong>data</strong>.
             <br>
-            Unless things feel <strong>"just right"</strong>, go back to 
-            <br><strong>1. Understand Goals</strong>!
+            Unless things feel <strong>"just right,"</strong> iterate!
         </p>
     </div>
 </div>
