--- a/diablo.html
+++ b/diablo.html
@@ -24,7 +24,7 @@ title: "Diablo IV"
         -->
         <br>
         <em>My role:</em>
-        <h2><strong>Class Design Intern</strong></h2>
+        <h2><strong>Class Designer</strong></h2>
         <em>June 2024 - September 2024</em>
         <!--<ul>
             <li class="importantItem">Created <strong>4 evergreen powers</strong> from paper design to <strong>release</strong> for the Spiritborn class released in the Vessel of Hatred Expansion.</li>
