--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ title: "Home"
         <!-- If you want titles below the thumbnail, use this figcaption structure:
             <figcaption>DIABLO IV</figcaption> -->
             <ul class="tags">
-                <li class="Internship redBackgroundColor">Internship</li>
+                <!--<li class="Internship redBackgroundColor">Internship</li>-->
+                <li class="ClassDesign">Class Design</li>
                 <li class="CombatDesign">Combat Design</li>
             </ul>
         </div>
@@ -47,7 +48,8 @@ title: "Home"
         <div class="hoverfilter">
             <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
             <ul class="tags">
-                <li class="Internship redBackgroundColor">Internship</li>
+                <!--<li class="Internship redBackgroundColor">Internship</li>-->
+                <li class="HeroDesign">Hero Design</li>
                 <li class="CombatDesign">Combat Design</li>
             </ul>
         </div>
