--- a/overwatch2.html
+++ b/overwatch2.html
@@ -16,8 +16,8 @@ title: "Overwatch 2"
     </div>
     <div class="item">
         <em>My role:</em>
-        <h2><strong>Hero Design Intern</strong></h2>
-        <h3>SPARX (Sophomore) Intern</h3>
+        <h2><strong>Hero Designer</strong></h2>
+        <!--<h3>SPARX (Sophomore) Intern</h3>-->
         <em>June 2023 - September 2023</em>
         <p>
             <ul>
