Added descriptions to D4 and OW2!

--- a/about.html
+++ b/about.html
@@ -27,12 +27,11 @@ title: "About Me"
         </h2>
         <p>
             <br>
-            I'm a <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> & <strong>Systems</strong> Design!
-            <!--I am a strong collaborator 
-            Due to my experience working on 
-            My primary passions
-            I'm a big fan of <strong>autobattlers</strong> and <strong>roguelikes</strong> and I derive a lot of my inspiration from them.-->
-            <br>Previously, I worked on <strong>Diablo IV</strong> as a Class Designer and <strong>Overwatch 2</strong> as a Hero Designer.
+            I'm a <strong>SoCal-based</strong> <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
+            Previously, I worked on <strong>Diablo IV</strong> as a <strong>Class Designer</strong> and <strong>Overwatch 2</strong> as a <strong>Hero Designer</strong>.
+            <br>With <strong>over 3 years</strong> of game design experience I've found my niche 
+            creating <strong>modular mechanics</strong> that come together to create experiences that <strong>deeply align with the player's fantasy</strong>.
+
         </p>
         <div class="customizaAboutMe">
             <p>I am </p>
