--- a/diablo.html
+++ b/diablo.html
@@ -19,10 +19,6 @@ title: "Diablo IV"
         <figcaption>One of my Spiritborn glyphs!</figcaption>
     </div>-->
     <div class="item">
-        <!--
-        <h2 class="sectionTitle"><strong>What Did I Do?</strong></h2>
-        -->
-        <br>
         <em>My role:</em>
         <h2><strong>Class Designer</strong></h2>
         <em>June 2024 - September 2024</em>
@@ -32,25 +28,33 @@ title: "Diablo IV"
             <li>Consulted with <strong>Narrative Designers</strong> to name <strong>38</strong> permanent Spiritborn Paragon Glyphs and Rare Paragon Nodes.</li>
         </ul> -->
         <ul>
+            <li>Shipped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong> and <strong>4 evergreen powers</strong> for the post-release Spiritborn class.</li>
+            <li class="subli">Ideated, prototyped, iterated, implemented, playtested, and released to the public.</li>
             <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
-            <li>Created <strong>4 evergreen powers</strong> from paper design to <strong>release</strong> for the Spiritborn class.</li>
-            <li>Consulted with <strong>Narrative Designers</strong> to name <strong>38</strong> permanent Spiritborn powers.</li>
-            <li>Prototyped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong>.</li>
-            <li>Collaborated with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
-            <li><strong>Organized playtests</strong> and iterated on prototypes based on feedback.</li>
+            <li>Named <strong>38</strong> evergreen Spiritborn powers (Paragon Glyphs).</li>
+            <li>Collaborated heavily with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
+            <!--<li><strong>Led playtests</strong> and iterated on prototypes based on feedback.</li>
             <li>Fixed bugs and kept track of assigned tasks utilizing <strong>Jira</strong>.</li>
-            <li>Produced comprehensive living game design documents using <strong>Miro</strong>.</li>
+            <li>Produced comprehensive living game design documents using <strong>Miro</strong>.</li>-->
         </ul>
     </div>
-<!--
+
     <div class="item">
-        <h2 class="sectionTitle"><strong>Tools I used:</strong></h2>
-        <ul>
-            <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
-            <li>Produced comprehensive living game design documents using <strong>Miro</strong>.</li>
-        </ul>
+        <h2>What is a Class Designer?</h2>
+        <p>
+            In <strong>Diablo IV</strong>, players can choose one of many playable <strong>classes</strong>, such as Spiritborn or Necromancer.
+            These classes all have their unique <strong>strengths</strong>, <strong>weaknesses</strong>, <strong>identities</strong>,
+            and <strong>core fantasies</strong> that are expressed through <strong>skills</strong>, <strong>items</strong>,
+            and <strong>seasonal powers</strong>.
+            A <strong>Class Designer</strong> is in charge of <strong>defining</strong>, <strong>implementing</strong>,
+            and <strong>maintaining</strong> these classes all while ensuring they are <strong>engaging</strong> and <strong>balanced</strong>.
+        </p>
     </div>
-    -->
+
+    <div class="gameAsset">
+        <img src="images/DiabloIV/Spiritborn.jpg" alt="Key Art of Spiritborn">
+        <figcaption>Key Art of the Spiritborn Class.</figcaption>
+    </div>
 
     <!--
     <div class="item">
