--- a/overwatch2.html
+++ b/overwatch2.html
@@ -22,26 +22,42 @@ title: "Overwatch 2"
         <p>
             <ul>
                 <li>Implemented an original, fully playable Overwatch 2 hero with <strong>5 unique abilities</strong>.</li>
-                <li>Conceptualized multiple <strong>paper design concepts</strong>, representative of the 3 different Overwatch roles.</li>
+                    <li class="subli">Ideated, prototyped, iterated, implemented, and playtested.</li>
+                <li>Conceptualized multiple <strong>paper design concepts</strong>, representative of the 3 different Overwatch roles (Support, DPS, and Tank).</li>
                 <li>Scripted using Overwatch 2’s <strong>visual proprietary design scripting language</strong>.</li>
-                <li><strong>Led playtests</strong> and utilized feedback to iterate upon my own hero.</li>
-                <li>Participated in playtests and gave <strong>instrumental feedback</strong> to improve upon Overwatch 2.</li>
+                <li>Led and participated in numerous <strong>playtests</strong> to give and gain instrumental feedback.
             </ul>
         </p>
     </div>
-    <div class="item">
-        <h2><em>Who is ScrapMouse?</em></h2>
-        <p>
-            <strong>ScrapMouse</strong> is an Overwatch 2 hero that I created during my 2023 internship at Blizzard.
-            She will <strong>NOT</strong> be released in Overwatch 2 as far as I know.
-            She is a medium-range DPS/damage hero who wields a homemade nail gun with a rebar launcher on top.
-            I wanted players to feel like a nimble, scrappy hero whose power snowballs as she continues to do more damage.
-            She is also a chaos-loving gremlin who named herself after Junkrat <em style="font-size: 1rem;">(Junk = Scrap, Rat = Mouse ... get it?)</em>.
 
+    <div class="item">
+        <h2>What is a Hero Designer?</h2>
+        <p>
+            In <strong>Overwatch 2</strong>, a <strong>Hero Designer</strong> creates
+            the gameplay mechanics and abilities for the many playable <strong>heroes</strong>.
+            An Overwatch 2 hero typically has inherent <strong>parameters</strong> such as Health and Ammo, <strong>4 to 6 active abilities</strong>, <strong>in-match upgrades</strong> called "perks,"
+            a <strong>passive ability</strong>, and one game-changing <strong>ultimate ability</strong>.
+            Every Overwatch 2 hero has situations that <strong>allow the player's skills to shine</strong> and others that intentionally <strong>create challenges</strong>.
         </p>
     </div>
+
+    <div class="gameAsset">
+        <img src="images/Overwatch 2/Juno.png" alt="An Image of Juno from Overwatch 2">
+        <figcaption>Juno, a support hero from Overwatch 2.</figcaption>
+    </div>
+
     <div class="item">
         <img src="images/Overwatch 2/ScrapMouse.jpg" alt="A drawing of ScrapMouse by me!">
         <figcaption>A drawing of ScrapMouse by me!</figcaption>
+    </div>
+
+    <div class="item">
+        <h2>Who is ScrapMouse?</h2>
+        <p>
+            <strong>ScrapMouse</strong> is an Overwatch 2 hero that I created during my 2023 Hero Design Internship at Blizzard.
+            She is a <strong>medium-range DPS</strong> hero who wields a homemade <strong>nail gun</strong> with a <strong>rebar launcher</strong> on top.
+            My intended player fantasy was that of a <strong>nimble</strong>, <strong>scrappy</strong> hero whose power snowballs as she continues to do more damage.
+            <br>She is also a chaos-loving gremlin who named herself after Junkrat <em style="font-size: 1rem;">(Junk = Scrap, Rat = Mouse ... get it?)</em>.
+        </p>
     </div>
 </div>
