Mobile friendly changes
- images & text are larger and have smaller margins
- fixed issue with weird space with hamburger menu
- fixed design process boxes being misaligned

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ title: "About Me"
         </h2>
         <p>
             <br>
-            I'm a <strong>SoCal-based</strong> <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
+            I'm a SoCal-based <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
             Previously, I worked on <strong>Diablo IV</strong> as a <strong>Class Designer</strong> and <strong>Overwatch 2</strong> as a <strong>Hero Designer</strong>.
             <br>With <strong>over 3 years</strong> of game design experience I've found my niche 
             creating <strong>modular mechanics</strong> that come together to create experiences that <strong>deeply align with the player's fantasy</strong>.
@@ -53,8 +53,7 @@ title: "About Me"
 <div class="titleContainer">
     <h1 style="margin-bottom:1.5rem;">My Design Process!</h1>
 </div>
-<div class="gamesContainer" style="margin: 0rem 15% 2rem;
-">
+<div class="designProcessContainer">
     <div class="designProcessItem redBackgroundColor">
         <h2>1. <span style="text-decoration: underline;">Understand Goals</span></h2>
         <p>
