--- a/diablo.html
+++ b/diablo.html
@@ -42,7 +42,7 @@ title: "Diablo IV"
     <div class="item">
         <h2>What is a Class Designer?</h2>
         <p>
-            In <strong>Diablo IV</strong>, players can choose one of many playable <strong>classes</strong>, such as Spiritborn or Necromancer.
+            In <strong>Diablo IV</strong>, players can choose one of many playable <strong>classes</strong>.
             These classes all have their unique <strong>strengths</strong>, <strong>weaknesses</strong>, <strong>identities</strong>,
             and <strong>core fantasies</strong> that are expressed through <strong>skills</strong>, <strong>items</strong>,
             and <strong>seasonal powers</strong>.
