--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Home"
 ---
 <div class="homePageIntro">
-    <h2><span style="color: hsl(270, 6%, 13%); text-decoration: underline;"><!--
+    <h2><span class="homePageName"><!--
         --><span style="color: #ce2f4e">F</span><!--
         --><span style="color: #d03067">r</span><!--
         --><span style="color: #d13180">a</span><!--
@@ -13,6 +13,7 @@ title: "Home"
         --><span style="color: #ca34d8">s</span><!--
         --><span style="color: #b335da">c</span><!--
         --><span style="color: #9b36dc">a </span><!--
+        --><br class="onlyOnSmallestMobile"><!--
         --><span style="color: #8436dd">M</span><!--
         --><span style="color: #6c37df">a</span><!--
         --><span style="color: #5438e1">n</span><!--
@@ -22,6 +23,7 @@ title: "Home"
         --><span style="color: #3b86e8">l</span><!--
         --><span style="color: #3ca1e9">a</span><!--
         --><span style="color: #3dbceb">s</span>
+        <br style="margin: 1rem;" class="onlyOnSmallestMobile">
     </strong></h2>
     <h1>GAME DESIGNER</h1>
 </div>
