--- a/overwatch2.html
+++ b/overwatch2.html
@@ -46,7 +46,7 @@ title: "Overwatch 2"
         <figcaption>Juno, a support hero from Overwatch 2.</figcaption>
     </div>
 
-    <div class="item">
+    <div class="gameAsset">
         <img src="images/Overwatch 2/ScrapMouse.jpg" alt="A drawing of ScrapMouse by me!">
         <figcaption>A drawing of ScrapMouse by me!</figcaption>
     </div>
@@ -57,7 +57,8 @@ title: "Overwatch 2"
             <strong>ScrapMouse</strong> is an Overwatch 2 hero that I created during my 2023 Hero Design Internship at Blizzard.
             She is a <strong>medium-range DPS</strong> hero who wields a homemade <strong>nail gun</strong> with a <strong>rebar launcher</strong> on top.
             My intended player fantasy was that of a <strong>nimble</strong>, <strong>scrappy</strong> hero whose power snowballs as she continues to do more damage.
-            <br>She is also a chaos-loving gremlin who named herself after Junkrat <em style="font-size: 1rem;">(Junk = Scrap, Rat = Mouse ... get it?)</em>.
+            <br>She is also a chaos-loving gremlin who named herself after Junkrat
+            <br class="onlyOnMobile"><em style="font-size: 1rem;">(Junk = Scrap, Rat = Mouse ... get it?)</em>.
         </p>
     </div>
 </div>
