Reworded some stuff :)

--- a/diablo.html
+++ b/diablo.html
@@ -42,12 +42,12 @@ title: "Diablo IV"
     <div class="item">
         <h2>What is a Class Designer?</h2>
         <p>
-            In <strong>Diablo IV</strong>, players can choose one of many playable <strong>classes</strong>.
-            These classes all have their unique <strong>strengths</strong>, <strong>weaknesses</strong>, <strong>identities</strong>,
-            and <strong>core fantasies</strong> that are expressed through <strong>skills</strong>, <strong>items</strong>,
-            and <strong>seasonal powers</strong>.
             A <strong>Class Designer</strong> is in charge of <strong>defining</strong>, <strong>implementing</strong>,
-            and <strong>maintaining</strong> these classes all while ensuring they are <strong>engaging</strong> and <strong>balanced</strong>.
+            and <strong>maintaining</strong> the <strong>Diablo IV</strong> playable classes all while ensuring they are <strong>engaging</strong>
+            and <strong>balanced</strong>.
+            These classes have unique <strong>strengths</strong>, <strong>weaknesses</strong>, <strong>identities</strong>,
+            and <strong>core fantasies</strong> that are expressed through the <strong>skills</strong>, <strong>items</strong>,
+            and <strong>seasonal powers</strong> that Class Designers create.
         </p>
     </div>
 
