--- a/overwatch2.html
+++ b/overwatch2.html
@@ -35,15 +35,17 @@ title: "Overwatch 2"
         <p>
             In <strong>Overwatch 2</strong>, a <strong>Hero Designer</strong> creates
             the gameplay mechanics and abilities for the many playable <strong>heroes</strong>.
-            An Overwatch 2 hero typically has inherent <strong>parameters</strong> such as Health and Ammo, <strong>4 to 6 active abilities</strong>, <strong>in-match upgrades</strong> called "perks,"
+            An Overwatch 2 hero typically has inherent <strong>parameters</strong> such as Health and Ammo,
+            <strong>4 to 6 active abilities</strong>, <strong>in-match progression</strong> through Perks and Stadium powers and hero items,
             a <strong>passive ability</strong>, and one game-changing <strong>ultimate ability</strong>.
-            Every Overwatch 2 hero has situations that <strong>allow the player's skills to shine</strong> and others that intentionally <strong>create challenges</strong>.
+            Every Overwatch 2 hero has situations that <strong>allow the player's skills to shine</strong>
+            and others that intentionally <strong>create challenges</strong>.
         </p>
     </div>
 
     <div class="gameAsset">
         <img src="images/Overwatch 2/Juno.png" alt="An Image of Juno from Overwatch 2">
-        <figcaption>Juno, a support hero from Overwatch 2.</figcaption>
+        <figcaption>I participated in a lot of playtests and gave feedback for Juno, a support hero released for Season 12 in August 2024.</figcaption>
     </div>
 
     <div class="gameAsset">
