Updated about me

--- a/about.html
+++ b/about.html
@@ -90,24 +90,24 @@ title: "About Me"
     <h1>Currently <br class="onlyOnSmallestMobile">Playing</h1>
 </div>
 
-<div class="homePageGames">    
+<div class="homePageGames">
     <div class="game">
-        <a href="https://playthebazaar.com/">
-            <img class="hoverfilter" src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar Cover Art">
+        <a href="https://teamfighttactics.leagueoflegends.com/en-us/">
+            <img  class="hoverfilter" src="images/CurrentlyPlaying/TFTSet16.webp" alt="Teamfight Tactics Set 16 cover art">
         </a>
-        <figcaption>THE BAZAAR</figcaption>
+        <figcaption>TEAMFIGHT TACTICS</figcaption>
+    </div>
+    <div class="game">
+        <a href="https://store.steampowered.com/agecheck/app/1888930/">
+            <img class="hoverfilter" src="images/CurrentlyPlaying/TLOU1.webp" alt="The Last of Us Part 1 cover art">
+        </a>
+        <figcaption>THE LAST OF US PART 1</figcaption>
     </div>
     <div class="game">
         <a href="https://hearthstone.blizzard.com/en-us">
-            <img  class="hoverfilter" src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Lost City of Un'Goro Cover Art">
+            <img  class="hoverfilter" src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Timeways cover art">
         </a>
         <figcaption>HEARTHSTONE</figcaption>
-    </div>
-    <div class="game">
-        <a href="https://teamfighttactics.leagueoflegends.com/en-us/">
-            <img  class="hoverfilter" src="images/CurrentlyPlaying/TFTSet15.jpg" alt="Teamfight Tactics Set 15 Cover Art">
-        </a>
-        <figcaption>TEAMFIGHT TACTICS</figcaption>
     </div>
 </div>
 
