--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ title: "About Me"
         </h2>
         <p>
             <br>
-            I'm a SoCal-based <strong>Technical Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
+            I'm a SoCal-based <strong>Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
             Previously, I worked on <strong>Diablo IV</strong> as a <strong>Class Designer</strong> and <strong>Overwatch 2</strong> as a <strong>Hero Designer</strong>.
             <br>With <strong>over 3 years</strong> of game design experience I've found my niche 
             creating <strong>modular mechanics</strong> that come together to create experiences that <strong>deeply align with the player's fantasy</strong>.
@@ -124,10 +124,10 @@ title: "About Me"
         <figcaption>THE BINDING OF ISAAC</figcaption>
     </div>
     <div class="game">
-        <a href="https://store.steampowered.com/app/3320/Insaniquarium_Deluxe/">
-            <img  class="hoverfilter" src="images/FavoriteGames/insaniquarium.png" alt="Insaniquarium Cover Art">
+        <a href="https://store.steampowered.com/app/1675830/1000xRESIST/">
+            <img  class="hoverfilter" src="images/FavoriteGames/1000xRESIST.png" alt="1000xRESIST Cover Art">
         </a>
-        <figcaption>INSANIQUARIUM</figcaption>
+        <figcaption>1000XRESIST</figcaption>
     </div>
     <div class="game">
         <a href="https://hearthstone.blizzard.com/en-us/battlegrounds/">
