Made small changes to diablo & quickshot pages
also changed hearthstone for the bazaar on currently playing

--- a/about.html
+++ b/about.html
@@ -92,6 +92,12 @@ title: "About Me"
 
 <div class="homePageGames">
     <div class="game">
+        <a href="https://playthebazaar.com/">
+            <img  class="hoverfilter" src="images/CurrentlyPlaying/TheBazaar.png" alt="The Bazaar cover art">
+        </a>
+        <figcaption>THE BAZAAR</figcaption>
+    </div>
+    <div class="game">
         <a href="https://teamfighttactics.leagueoflegends.com/en-us/">
             <img  class="hoverfilter" src="images/CurrentlyPlaying/TFTSet16.webp" alt="Teamfight Tactics Set 16 cover art">
         </a>
@@ -102,12 +108,6 @@ title: "About Me"
             <img class="hoverfilter" src="images/CurrentlyPlaying/TLOU1.webp" alt="The Last of Us Part 1 cover art">
         </a>
         <figcaption>THE LAST OF US PART 1</figcaption>
-    </div>
-    <div class="game">
-        <a href="https://hearthstone.blizzard.com/en-us">
-            <img  class="hoverfilter" src="images/CurrentlyPlaying/hearthstone.png" alt="Hearthstone Timeways cover art">
-        </a>
-        <figcaption>HEARTHSTONE</figcaption>
     </div>
 </div>
 
