--- a/diablo.html
+++ b/diablo.html
@@ -29,10 +29,12 @@ title: "Diablo IV"
         </ul> -->
         <ul>
             <li>Shipped <strong>4 Witchcraft powers</strong> for <strong>Season 7</strong> and <strong>4 evergreen powers</strong> for the post-release Spiritborn class.</li>
-            <li class="subli">Ideated, prototyped, iterated, implemented, playtested, and released to the public.</li>
+                <li class="subli">Ideated, prototyped, iterated, implemented, playtested, and released to the public.</li>
+                <li class="subli">These powers include the <strong style="color: #8037df;">Abyssal Resonance</strong> and <strong style="color: #df37ad;">Aura of Lament</strong> Season 7 powers and the <strong style="color: #806496;">Menagerist</strong> and <strong style="color: #78c92c;">Consumption</strong> Spiritborn glyphs. </li>
             <li>Scripted with <strong>Lua</strong> in Diablo IV’s proprietary engine.</li>
             <li>Named <strong>38</strong> evergreen Spiritborn powers (Paragon Glyphs).</li>
             <li>Collaborated heavily with other departments and worked around <strong>interdisciplinary constraints</strong>.</li>
+            <li>Authored <strong>clear</strong>, <strong>player-friendly UI text</strong> for the powers I created, <strong>ensuring consistency</strong> with pre-existing terminology.</li>
             <!--<li><strong>Led playtests</strong> and iterated on prototypes based on feedback.</li>
             <li>Fixed bugs and kept track of assigned tasks utilizing <strong>Jira</strong>.</li>
             <li>Produced comprehensive living game design documents using <strong>Miro</strong>.</li>-->
@@ -88,15 +90,6 @@ title: "Diablo IV"
             This project helped me to get familiar with scripting in Diablo's proprietary engine.
             I also named most of Spiritborn's Paragon Glyphs and Rare Paragon Nodes.
         </p>
-    </div>
-    -->
-    <!--
-    <div class="item">
-        <img src="images/DiabloIV/ClayGolem.webp" alt="A screenshot from Diablo 2 featuring a Clay Golem.">
-        <figcaption>
-            Recently, I've been playing Diablo 2: Resurrected.
-            I'm a Necromancer whose bestfriend is a silly little clay golem.
-        </figcaption>
     </div>
     -->
 </div>
