--- a/quickshot.html
+++ b/quickshot.html
@@ -26,7 +26,7 @@ title: "QuickShot"
         <h2><strong>Combat & Systems Designer</strong></h2>
         <em>Unity | January 2024 - April 2024 | 13 Team Members</em>
         <ul>
-            <li>Designed the <strong>primary weapon</strong> used in an <strong>action-packed FPS deathmatch</strong> game.</li>
+            <li>Designed the sole weapon, a<strong>sniper rifle</strong>, used in an <strong>action-packed FPS deathmatch</strong> game.</li>
             <li>Researched <strong>weapon parameters</strong>, <strong>player sentiment</strong>, and <strong>pain points</strong> for sniper rifles in popular FPS titles.</li>
             <li>Collaborated with other designers to refine <strong>respawn timer</strong> and <strong>match end condition systems</strong>.</li>
             <li>Maintained <strong>accurate documentation</strong> of iterations and new findings throughout development.</li>
