Removed the "2" from "Overwatch 2"

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ title: "About Me"
         <p>
             <br>
             I'm a SoCal-based <strong>Game Designer</strong> with a focus on <strong>Combat</strong> and <strong>Systems</strong> Design!
-            Previously, I worked on <strong>Diablo IV</strong> as a <strong>Class Designer</strong> and <strong>Overwatch 2</strong> as a <strong>Hero Designer</strong>.
+            Previously, I worked on <strong>Diablo IV</strong> as a <strong>Class Designer</strong> and <strong>Overwatch</strong> as a <strong>Hero Designer</strong>.
             <br>With <strong>over 3 years</strong> of game design experience I've found my niche 
             creating <strong>modular mechanics</strong> that come together to create experiences that <strong>deeply align with the player's fantasy</strong>.
 
