--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ title: "Home"
         </div>
     </div>
     <div class="game">
-        <h2>OVERWATCH 2</h2>
+        <h2>OVERWATCH</h2>
         <div class="hoverfilter">
-            <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch 2"></a>
+            <a href="overwatch2.html"><img src="images/Overwatch 2/Overwatch2.png" alt="Overwatch"></a>
             <ul class="tags">
                 <!--<li class="Internship redBackgroundColor">Internship</li>-->
                 <li class="HeroDesign">Hero Design</li>
