--- a/overwatch2.html
+++ b/overwatch2.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Overwatch 2"
+title: "Overwatch"
 ---
 
 <div class="titleContainer">
@@ -21,10 +21,10 @@ title: "Overwatch 2"
         <em>June 2023 - September 2023</em>
         <p>
             <ul>
-                <li>Implemented an original, fully playable Overwatch 2 hero with <strong>5 unique abilities</strong>.</li>
+                <li>Implemented an original, fully playable Overwatch hero with <strong>5 unique abilities</strong>.</li>
                     <li class="subli">Ideated, prototyped, iterated, implemented, and playtested.</li>
                 <li>Conceptualized multiple <strong>paper design concepts</strong>, representative of the 3 different Overwatch roles (Support, DPS, and Tank).</li>
-                <li>Scripted using Overwatch 2’s <strong>visual proprietary design scripting language</strong>.</li>
+                <li>Scripted using Overwatch’s <strong>visual proprietary design scripting language</strong>.</li>
                 <li>Led and participated in numerous <strong>playtests</strong> to give and gain instrumental feedback.
             </ul>
         </p>
@@ -33,18 +33,18 @@ title: "Overwatch 2"
     <div class="item">
         <h2>What is a Hero Designer?</h2>
         <p>
-            In <strong>Overwatch 2</strong>, a <strong>Hero Designer</strong> creates
+            In <strong>Overwatch</strong>, a <strong>Hero Designer</strong> creates
             the gameplay mechanics and abilities for the many playable <strong>heroes</strong>.
-            An Overwatch 2 hero typically has inherent <strong>parameters</strong> such as Health and Ammo,
+            An Overwatch hero typically has inherent <strong>parameters</strong> such as Health and Ammo,
             <strong>4 to 6 active abilities</strong>, <strong>in-match progression</strong> through Perks and Stadium powers and hero items,
             a <strong>passive ability</strong>, and one game-changing <strong>ultimate ability</strong>.
-            Every Overwatch 2 hero has situations that <strong>allow the player's skills to shine</strong>
+            Every Overwatch hero has situations that <strong>allow the player's skills to shine</strong>
             and others that intentionally <strong>create challenges</strong>.
         </p>
     </div>
 
     <div class="gameAsset">
-        <img src="images/Overwatch 2/Juno.png" alt="An Image of Juno from Overwatch 2">
+        <img src="images/Overwatch 2/Juno.png" alt="An Image of Juno from Overwatch">
         <figcaption>I participated in a lot of playtests and gave feedback for Juno, a support hero released for Season 12 in August 2024.</figcaption>
     </div>
 
@@ -56,7 +56,7 @@ title: "Overwatch 2"
     <div class="item">
         <h2>Who is ScrapMouse?</h2>
         <p>
-            <strong>ScrapMouse</strong> is an Overwatch 2 hero that I created during my 2023 Hero Design Internship at Blizzard.
+            <strong>ScrapMouse</strong> is an Overwatch hero that I created during my 2023 Hero Design Internship at Blizzard.
             She is a <strong>medium-range DPS</strong> hero who wields a homemade <strong>nail gun</strong> with a <strong>rebar launcher</strong> on top.
             My intended player fantasy was that of a <strong>nimble</strong>, <strong>scrappy</strong> hero whose power snowballs as she continues to do more damage.
             <br>She is also a chaos-loving gremlin who named herself after Junkrat
